fix spacing

--- a/resources/assets/scss/pages/_home.scss
+++ b/resources/assets/scss/pages/_home.scss
@@ -65,4 +65,8 @@
 
 .be-give-progress{
     margin: 0;
+    padding: 0;
+    .be-col-we-are-charity.wp-block-column {
+        padding-right: 10%;
+    }
 }
